Fix shiftWheel + Re-Enable OsMessage

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,14 @@ body {
   top: 60vh;
 }
 
+.header {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .header * {
   z-index: 1;
 }
